Updated UI and BE code, now able to save and update budgets